@@ -1,6 +1,6 @@
 dnl $Id$
 AC_INIT(dash, 0.5.2)
-AM_INIT_AUTOMAKE
+AM_INIT_AUTOMAKE([foreign])
 AC_CONFIG_SRCDIR([src/main.c])
 
 AC_CONFIG_HEADERS(config.h)
@@ -9,6 +9,15 @@ dnl Checks for programs.
 AC_PROG_CC
 AC_GNU_SOURCE
 AC_PROG_YACC
+
+AC_MSG_CHECKING([for build system compiler])
+if test "$cross_compiling" = yes; then
+	CC_FOR_BUILD=${CC_FOR_BUILD-cc}
+else
+	CC_FOR_BUILD=${CC}
+fi
+AC_MSG_RESULT(${CC_FOR_BUILD})
+AC_SUBST(CC_FOR_BUILD)
 
 dnl Checks for libraries.
 
